<resources>
    <string name="app_name">fitstagram</string>
    <string name="description">Description</string>
    <string name="insert_description_here">insert description here</string>
    <string name="priority">Priority</string>
    <string name="insert_minutes_here">insert minutes here</string>
    <string name="cancel">Cancel</string>
    <string name="submit_post">Submit Post</string>
    <string name="post">Post</string>
    <string name="general_feed">General Feed</string>
    <string name="time">time</string>
    <string name="title_activity_controller">Controller</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="regular_post">Regular Post</string>
    <string name="vote_post">Vote Post</string>
    <string name="go_back">Go Back</string>
    <string name="profile">Profile</string>
    <string name="change_username">change_username</string>
    <string name="change_aboutme">change_aboutme</string>
    <string name="change_profile_picture">change_profile_picture</string>
    <string name="logout">logout</string>
    <string name="fitstagram_ranking">FITSTAGRAM RANKING</string>
    <string name="prompt_email" />
    <string name="prompt_password" />
    <string name="action_sign_in_short" />
    <string name="add_description">Add Description</string>
    <string name="insert_here">insert here...</string>
    <string name="set_time">Set Time</string>

    <string-array name = "position">
        <item> 1. </item>
        <item> 2. </item>
        <item> 3. </item>
        <item> 4. </item>
        <item> 5. </item>
        <item> 6. </item>
        <item> 7. </item>
        <item> 8. </item>
        <item> 9. </item>
        <item>10. </item>
        <item>11. </item>
        <item>11. </item>
        <item>12. </item>
        <item>13. </item>
        <item>14. </item>
        <item>15. </item>
        <item>16. </item>
        <item>17. </item>
        <item>18. </item>
        <item>19. </item>
        <item>20. </item>
    </string-array>
</resources>