<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userpost_or_voterpost"
    android:background="@drawable/radial_background">

    <Button
        android:id="@+id/userpost"
        android:layout_width="144dp"
        android:layout_height="160dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="40dp"
        android:text="@string/regular_post"
        android:textSize="18sp"
        app:backgroundTint="#4D599E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/voterpost"
        android:layout_width="144dp"
        android:layout_height="160dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="200dp"
        android:text="@string/vote_post"
        android:textSize="18sp"
        app:backgroundTint="#4D599E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/go_back"
        app:backgroundTint="#F84C4C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>